# agent_platform

./: .gitignore  CHECKLIST.md  README.md  code-patterns.md  config.yaml  demo.py  implementation-checklist.md  implementation-strategy.md  pyproject.toml  setup.sh
agent_platform/: orchestrator.py
architecture/: adr-template.md  c4-diagrams.md  implementation-examples.py  platform-design.md
tests/: test_orchestrator.py
